--- a/index.html
+++ b/index.html
@@ -14,21 +14,51 @@
   <body>
     <div class="container">
       <form id="formOne">
+        <div class="panel">
+          <div class="form-group">
+            <label for="name">Let's start off with your name:</label>
+            <input type="text" class="name" id="name">
+          </div>
+          <div class="form-group">
+            <label for="first-deposit">Your first deposit:</label>
+            <input type="number" class="first-deposit" id="first-deposit">
+          </div>
+          <button type="submit" class="btn btn-warning" id="submit">Submit!</button>
+        </div>
+      </form>
+
+    <div class="current-balance">
+      <div class="well" id="first-well">
+        <p>Your current balance is: $<span class="display"></span></p>
+      </div>
+    </div>
+
+    <form id="formTwo">
       <div class="panel">
         <div class="form-group">
-          <label for="name">Let's start off with your name:</label>
-          <input type="text" class="name" id="name">
+          <label for="deposit">Deposit:</label>
+          <input type="text" class="deposit" id="deposit">
         </div>
-        <div class="form-group">
-          <label for="first-deposit">Your first deposit:</label>
-          <input type="number" class="name" id="first-deposit">
-        </div>
-      <button type="submit" class="btn btn-warning" id="submit">Submit!</button>
+        <button type="submit" class="btn btn-warning" id="deposit-submit">Submit!</button>
+      </div>
     </form>
-    </div>
-    <div class="current-balance">
-      <div class="well">
-        <p>Your current balance is: $<span class="display"></span></p>
+
+    <form id="formThree">
+      <div class="panel">
+        <div class="form-group">
+          <label for="withdrawal">Withdrawal:</label>
+          <input type="number" class="withdrawal" id="withdrawal">
+        </div>
+        <button type="submit" class="btn btn-warning" id="withdrawal-submit">Submit!</button>
+      </div>
+    </form>
+
+    <div class="new-balance">
+      <div class="well" id="deposit-well">
+        <p>Your current balance is: $<span class="display-deposit"></span></p>
+      </div>
+      <div class="well" id="withdrawal-well">
+        <p>Your current balance is: $<span class="display-withdrawal"></span></p>
       </div>
     </div>
     </div>
