--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <label for="first-deposit">Your first deposit:</label>
             <input type="number" class="first-deposit" id="first-deposit">
           </div>
-          <button type="submit" class="btn btn-warning" id="submit">Submit!</button>
+          <button type="submit" class="btn btn-warning" id="submit">Create Account</button>
         </div>
       </form>
 
@@ -39,7 +39,7 @@
           <label for="deposit">Deposit:</label>
           <input type="text" class="deposit" id="deposit">
         </div>
-        <button type="submit" class="btn btn-warning" id="deposit-submit">Submit!</button>
+        <button type="submit" class="btn btn-warning" id="deposit-submit">Deposit</button>
       </div>
     </form>
 
@@ -49,7 +49,7 @@
           <label for="withdrawal">Withdrawal:</label>
           <input type="number" class="withdrawal" id="withdrawal">
         </div>
-        <button type="submit" class="btn btn-warning" id="withdrawal-submit">Submit!</button>
+        <button type="submit" class="btn btn-warning" id="withdrawal-submit">Withdraw</button>
       </div>
     </form>
 
